Refactored WebSecurityConfig