@@ -1,10 +1,5 @@
 package fr.cnam.stefangeorgesco.dmp.configuration;
 
-import java.util.Arrays;
-import java.util.Collections;
-
-import javax.servlet.http.HttpServletRequest;
-
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -15,7 +10,9 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
+
+import java.util.Collections;
+import java.util.List;
 
 @Configuration
 public class WebSecurityConfig {
@@ -33,18 +30,15 @@ public class WebSecurityConfig {
         jwtAuthenticationConverter.setPrincipalClaimName(principalClaimName);
 		
 		http.sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS).and().cors()
-				.configurationSource(new CorsConfigurationSource() {
-					@Override
-					public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-						CorsConfiguration config = new CorsConfiguration();
-						config.setAllowedOriginPatterns(Collections.singletonList(frontEndUrl));
-						config.setAllowedMethods(Collections.singletonList("*"));
-						config.setAllowCredentials(true);
-						config.setAllowedHeaders(Collections.singletonList("*"));
-						config.setExposedHeaders(Arrays.asList("Authorization"));
-						config.setMaxAge(3600L);
-						return config;
-					}
+				.configurationSource(request -> {
+					CorsConfiguration config = new CorsConfiguration();
+					config.setAllowedOriginPatterns(Collections.singletonList(frontEndUrl));
+					config.setAllowedMethods(Collections.singletonList("*"));
+					config.setAllowCredentials(true);
+					config.setAllowedHeaders(Collections.singletonList("*"));
+					config.setExposedHeaders(List.of("Authorization"));
+					config.setMaxAge(3600L);
+					return config;
 				}).and().csrf().disable()
 				.authorizeHttpRequests()
 						.mvcMatchers(HttpMethod.POST, "/user").permitAll()
